[build-system]
requires = ["setuptools>=61.0", "numpy>=1.21.2", "pandas>=1.3.4", "labkey == 1.2.0,2.4.0", "lifelines>=0.27.4"]
build-backend = "setuptools.build_meta"

[project]
name = "gel_survival"
version = "1.0.0"
authors = [
	{name="Christian Bouwens", email="christian.bouwens@genomicsengland.co.uk"},
]
description = "this package assists in extracting and calculating survival metrics from the Genomics England 100,000 Genomes Project data."
readme ="README.md"
requires-python =">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved ::  MIT License",
	"Operating system :: OS Independent",

]
